@@ -96,7 +96,7 @@ fixups:
 	$(CP) -pr $(R_HOME)/Tcl $(RPREFIX)
 
 R.iss Rsmall.iss: JRins.pl imagedir fixups md5sums
-	perl JRins.pl $(RPREFIX) 
+	perl JRins.pl $(RPREFIX) $(RPREFIX)
 
 $(RPREFIX).exe: R.iss
 	"$(ISDIR)/iscc" R.iss > $(RPREFIX).log
@@ -108,3 +108,14 @@ clean:
 
 distclean: clean
 	rm -f $(RPREFIX).exe miniR*
+
+myR:
+	$(CAT) $(IMAGEDIR)/library/*/CONTENTS >  \
+	  $(IMAGEDIR)/doc/html/search/index.txt
+	echo "make.packages.html(.Library)" | $(IMAGEDIR)/bin/rterm --vanilla --slave LC_COLLATE=C
+	@echo "adding MD5 checksums"
+	@(cd $(IMAGEDIR); echo "tools:::.installMD5sums(\".\")" | \
+	  R_DEFAULT_PACKAGES=NULL LC_COLLATE=C R_OSTYPE=windows \
+	  bin/Rterm.exe --vanilla --slave)
+	perl JRins.pl $(RPREFIX) $(IMAGEDIR)
+	"$(ISDIR)/iscc" R.iss > myR.log
